--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h2>Рассчёт вероятности заданого луз стрика при проценте побед: 50%</h2>
 
-<p>Введите общее число игр:</p>
+<p>Введите общее количество игр:</p>
 <input [(ngModel)]="gamesCount" type="number">
 
-<p>Введите колличество игр в луз стрике:</p>
+<p>Введите количество игр в луз стрике:</p>
 <input [(ngModel)]="streakValue" type="number">
 
 <button (click)="calculateProbability(streakValue, gamesCount)">Рассчитать</button>
